--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,83 +27,103 @@
         />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:weightSum="5.5"
+        android:weightSum="2"
         android:layout_weight="0"
         >
 
 
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:text="@string/textnote"
-            android:id="@+id/button_main_open_text_note" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:weightSum="5.5"
+            android:layout_weight="1"
+            >
 
-        <Space
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"/>
+            <Button
+                android:layout_width="80dp"
+                android:layout_height="60dp"
+                android:text="@string/textnote"
+                android:id="@+id/button_main_open_text_note" />
 
-        <Button
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:text="@string/cam"
-            android:id="@+id/button_main_open_photo_note" />
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"/>
 
-        <Space
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"/>
+            <Button
+                android:layout_width="82dp"
+                android:layout_height="60dp"
+                android:text="@string/cam"
+                android:id="@+id/button_main_open_photo_note" />
 
-        <Button
-            android:layout_width="73dp"
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"/>
+
+            <Button
+                android:layout_width="86dp"
+                android:layout_height="60dp"
+                android:text="@string/handwrite"
+                android:id="@+id/button_main_open_hand_writing" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"/>
+
+            <Button
+                android:layout_width="63dp"
+                android:layout_height="wrap_content"
+                android:text="@string/donotdisturb"
+                android:id="@+id/button_dnd"
+                android:allowUndo="false" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:layout_weight="1"
+            >
+
+            <Button
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:text="CHECK LIST"
-            android:id="@+id/button_checklist"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_toRightOf="@+id/button_handwrite"
-            android:layout_toEndOf="@+id/button_handwrite"
-            android:layout_below="@+id/listView" />
+            android:id="@+id/button_checklist"/>
 
-        <Space
+            <Space
             android:layout_width="10dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"/>
 
-        <Button
-            android:layout_width="86dp"
-            android:layout_height="60dp"
-            android:text="@string/handwrite"
-            android:id="@+id/button_main_open_hand_writing" />
-
-        <Space
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"/>
-
-        <Button
+            <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Calendar"
             android:id="@+id/button_calendar" />
 
-        <Button
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"/>
+
+            <Button
             android:layout_width="53dp"
             android:layout_height="wrap_content"
             android:text="PDF"
             android:id="@+id/button_pdf" />
 
-        <Button
-            android:layout_width="63dp"
-            android:layout_height="wrap_content"
-            android:text="@string/donotdisturb"
-            android:id="@+id/button_dnd"
-            android:allowUndo="false" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
